log
Wed 20 Mar 2024 02:05:23 AM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
f78c365
Wed 20 Mar 2024 02:07:29 AM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:53:14: error: expected expression before ‘List’
   53 |     pushBack(List *L, void *dato)
      |              ^~~~
exercises.c:53:5: error: too few arguments to function ‘pushBack’
   53 |     pushBack(List *L, void *dato)
      |     ^~~~~~~~
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:20:6: note: declared here
   20 | void pushBack(List *L, void *dato);
      |      ^~~~~~~~
In file included from test.c:5:
exercises.c:53:34: error: expected ‘;’ before ‘}’ token
   53 |     pushBack(List *L, void *dato)
      |                                  ^
      |                                  ;
   54 |   }
      |   ~                               
Compilation failed
3eecd5a
Wed 20 Mar 2024 02:07:36 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:53:14: error: expected expression before ‘List’
   53 |     pushBack(List *L, void *dato);
      |              ^~~~
exercises.c:53:5: error: too few arguments to function ‘pushBack’
   53 |     pushBack(List *L, void *dato);
      |     ^~~~~~~~
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:20:6: note: declared here
   20 | void pushBack(List *L, void *dato);
      |      ^~~~~~~~
Compilation failed
45eaff4
Wed 20 Mar 2024 02:10:45 AM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
108f46c
Wed 20 Mar 2024 02:14:14 AM UTC: 
 exercises.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:72:19: error: expected ‘;’ before ‘}’ token
   72 |     dato = next(L)
      |                   ^
      |                   ;
   73 |   }
      |   ~                
Compilation failed
1003f7e
Wed 20 Mar 2024 02:14:21 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
137d750
Wed 20 Mar 2024 02:17:48 AM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
0e45c3c
Wed 20 Mar 2024 02:26:32 AM UTC: 
 exercises.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  0|0
c5038ec
Wed 20 Mar 2024 02:31:33 AM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  3|2
total_score: 40/70
588c25b
Wed 20 Mar 2024 02:37:26 AM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:113:10: error: ‘pilaTemp’ undeclared (first use in this function); did you mean ‘pilaTemp1’?
  113 |     push(pilaTemp, temp);
      |          ^~~~~~~~
      |          pilaTemp1
exercises.c:113:10: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:107:10: error: unused variable ‘pilaTemp1’ [-Werror=unused-variable]
  107 |   Stack* pilaTemp1 = create_stack();
      |          ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
27e2554
Wed 20 Mar 2024 02:37:41 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
24a718a
Wed 20 Mar 2024 02:52:32 AM UTC: 
 exercises.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:141:24: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
  141 |       push(pila, cadena[i]);
      |                  ~~~~~~^~~
      |                        |
      |                        char
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘char’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
In file included from test.c:5:
exercises.c:146:29: error: expected statement before ‘)’ token
  146 |       if (top(pila) != NULL))
      |                             ^
exercises.c:153:7: error: expected ‘}’ before ‘else’
  153 |       else
      |       ^~~~
exercises.c: At top level:
exercises.c:157:3: error: expected identifier or ‘(’ before ‘return’
  157 |   return 1;
      |   ^~~~~~
exercises.c:158:1: error: expected identifier or ‘(’ before ‘}’ token
  158 | }
      | ^
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:156:3: error: control reaches end of non-void function [-Werror=return-type]
  156 |   }
      |   ^
cc1: all warnings being treated as errors
Compilation failed
2c8bb37
Wed 20 Mar 2024 02:53:40 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:141:24: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
  141 |       push(pila, cadena[i]);
      |                  ~~~~~~^~~
      |                        |
      |                        char
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘char’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
24693ce
Wed 20 Mar 2024 02:56:09 AM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:140:17: error: ‘parentesis’ may be used uninitialized [-Werror=maybe-uninitialized]
  140 |     *parentesis = cadena[i];
      |     ~~~~~~~~~~~~^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1d4aee7
Wed 20 Mar 2024 02:59:07 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|1
total_score: 50/70
67732e1
Wed 20 Mar 2024 03:05:38 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|1
total_score: 50/70
0c49853
Wed 20 Mar 2024 03:12:13 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|1
total_score: 50/70
5e1c6b4
Wed 20 Mar 2024 03:14:23 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|1
total_score: 50/70
5675dd9
Wed 20 Mar 2024 03:15:59 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|1
total_score: 50/70
42b2585
Wed 20 Mar 2024 03:21:58 AM UTC: 
 exercises.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  4|1
total_score: 50/70
8e7eb39
Wed 20 Mar 2024 03:24:02 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
907f01a
Wed 20 Mar 2024 03:24:25 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
6223bab
Wed 20 Mar 2024 01:07:20 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:155:25: error: expected statement before ‘)’ token
  155 |   if (top(pila) == NULL))
      |                         ^
Compilation failed
f40a3f9
Wed 20 Mar 2024 01:07:30 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
d07dea1
Wed 20 Mar 2024 01:31:19 PM UTC: 
 exercises.c | 17 ++++++++++++++---
 1 file changed, 14 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c:132:1: error: unknown type name ‘bool’
  132 | bool esPareja(char c1, char c2)
      | ^~~~
exercises.c:8:1: note: ‘bool’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
    7 | #include "stack.h"
  +++ |+#include <stdbool.h>
    8 | 
exercises.c: In function ‘esPareja’:
exercises.c:137:12: error: ‘true’ undeclared (first use in this function)
  137 |     return true;
      |            ^~~~
exercises.c:137:12: note: ‘true’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
exercises.c:137:12: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:138:10: error: ‘false’ undeclared (first use in this function)
  138 |   return false;
      |          ^~~~~
exercises.c:138:10: note: ‘false’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:156:54: error: expected ‘)’ before ‘pop’
  156 |         if (esPareja(cadena[i], *((char *)top(pila)))
      |            ~                                         ^
      |                                                      )
  157 |         //if (cadena[i] == *((char *)top(pila)))
  158 |           pop(pila);
      |           ~~~                                         
exercises.c:161:7: error: expected expression before ‘}’ token
  161 |       }
      |       ^
exercises.c: In function ‘esPareja’:
exercises.c:139:1: error: control reaches end of non-void function [-Werror=return-type]
  139 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
59007c4
